# PyNvVideoCodec

./: CMakeLists.txt  LICENSE.txt  MANIFEST.in  PKG-INFO  README.rst  pyproject.toml  setup.py
src/: CMakeLists.txt
src/PyNvVideoCodec/: CMakeLists.txt  __init__.py
src/PyNvVideoCodec.egg-info/: SOURCES.txt  top_level.txt
src/PyNvVideoCodec/inc/: DLPackUtils.hpp  ExternalBuffer.hpp  NvDemuxer.hpp  NvEncoderClInterface.hpp  PyCAIMemoryView.hpp  PyNvDecoder.hpp  PyNvDemuxer.hpp  PyNvEncoder.hpp  PyNvVideoCodec.hpp  Version.hpp.in
src/PyNvVideoCodec/src/: DLPackUtils.cpp  ExternalBuffer.cpp  NvDemuxer.cpp  NvEncoderClInterface.cpp  PyCAIMemoryView.cpp  PyNvDecoder.cpp  PyNvDemuxer.cpp  PyNvEncoder.cpp  PyNvVideoCodec.cpp
src/VideoCodecSDKUtils/: CMakeLists.txt
src/VideoCodecSDKUtils/Interface/: cuviddec.h  nvEncodeAPI.h  nvcuvid.h
src/VideoCodecSDKUtils/helper_classes/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
src/VideoCodecSDKUtils/helper_classes/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h
src/VideoCodecSDKUtils/helper_classes/Utils/: BitDepth.cu  ColorSpace.cu  ColorSpace.h  FFmpegDemuxer.h  FFmpegStreamer.h  Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h  Resize.cu  crc.cu  cuvidFunctions.h  cuvid_dlopen.h  cuvid_dlopen_unix.cpp  cuvid_dlopen_windows.cpp  cuvid_function_pointer.h
src/cmake/: ffmpeg.cmake
