[build-system]        
requires = [
  "setuptools>=42",
  "scikit-build",
  "numpy",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "PyNvVideoCodec"
version = "1.0.2"
license = {file = "LICENSE.txt"}
description = "PyNvVideoCodec is NVIDIA’s Python based video codec library for hardware accelerated video encode and decode on NVIDIA GPUs."
authors = [{name = "NVIDIA"}]
maintainers = [
    {name = "nvidia"},
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
]


[project.urls]
documentation = "https://docs.nvidia.com/video-technologies/pynvvideocodec/index.html"
source = "https://catalog.ngc.nvidia.com/orgs/nvidia/resources/pynvvideocodec"